Added references to revised part

--- a/Report/crowd_sourcing_and_gdpr.tex
+++ b/Report/crowd_sourcing_and_gdpr.tex
@@ -193,46 +193,34 @@
 		\startsubsection
 			New Yorks department of buildings had too few inspectors to cover all complaints about illegal conversions of apartments in a sensible manner in the year 2011. This is a complicated situation as such conversions of living space increases the risk fire hazards among other dangers. As an answer, a team led by Michael Flowers has used predictive analytics have been used to prioritize the complaints by also incorporation the experience of senior inspectors \cite{BeyondOpenData}.\\
 			Thanks to this new prioritization, the false positives of the complaints have been drastically reduced, which increased the ration of resulting vacation orders from 13\% to 70\% \cite{PredictiveDataAnalytics}.
-			Additionally, this has positively influenced the incidents of deaths due to fire incidents as mentioned by the city \cite{BigDataBigApple} \cite{FDNY}.\\
-			
+			Additionally, this has positively influenced the incidents of deaths due to fire incidents as mentioned by the city \cite{BigDataBigApple} \cite{FDNY}.
 		\closesection
 		\subsection[Wiki Survey]{Wiki Survey \cite{BitbyBit}}
 		\startsubsection
-			Wiki surveys differ from normal surveys in the way that the answers do not have a finite number, but are in an open form, so that each participant can give answers outside of the expected scope. These outside answers are also exactly the reason to perform such a survey as it allows for new perspectives to be considered. For example New York City performed a wiki survey in 2010 on its sustainability plans, and eight of the top ten ideas where generated from the survey takers instead of being in the set of seed answers.\\
-			
+			Wiki surveys differ from normal surveys in the way that the answers do not have a finite number, but are in an open form, so that each participant can give answers outside of the expected scope. These outside answers are also exactly the reason to perform such a survey as it allows for new perspectives to be considered. For example New York City performed a wiki survey in 2010 on its sustainability plans, and eight of the top ten ideas where generated from the survey takers instead of being in the set of seed answers.
 		\closesection
 	\closesection
 	
-	\section{Boston}
+	\section[Boston]{Boston \cite{SmartCityBoston}}
 	\startsection
 		Just like Amsterdam, Boston's then Mayor Thomas Michael Menino, threw the hat into the ring of innovation by launching experimental smart initiatives in the year 2010. In his vision, Boston should be a host for innovations, rather than depend on the ones thought up and developed silently in universities and research firms. This realization of this vision has lead to the creation of numerous jobs and companies, while also marking Boston's Seaport as the Innovation District in the eyes of Mayor Menino for years to come.\\
 		A selection of these initiatives will be presented in the following sections, as they focus heavily on crowd-sourcing in respect to smart urban participatory applications and smart transportation.
-		%[Source: https://convene.com/catalyst/is-boston-the-smartest-city/ ,Title:Is Boston the Smartest City? ,  Author:By Natalie Holmes , Accessed:05.12.21]
-		
-		\subsection{BOS:311}
+		\subsection[BOS:311]{\href{https://311.boston.gov/}{BOS:311}}
 		\startsubsection
-		% The one above and [https://311.boston.gov/]
-		The application called 'BOS:311' 'deputizes' the citizens of Boston and allows them to report various issues found on the streets like potholes, illegal graffiti and so on. The users can report an issue by selecting out of a number of services, like 'Litter', which best corresponds to the found issue, add the location over Google Maps, take a photo, and add a description. Additionally the user can state if he wishes to share the report with the public, and he can also record his name and contact information, thought these will not be publicized. 
-		\closesection
-		
-		\subsection{Where's my School bus?}
+		The application called "BOS:311" "deputizes" the citizens of Boston and allows them to report various issues found on the streets like potholes, illegal graffiti and so on. The users can report an issue by selecting out of a number of services, like "Litter", which best corresponds to the found issue, add the location over Google Maps, take a photo, and add a description. Additionally the user can state if he wishes to share the report with the public, and he can also record his name and contact information, thought these will not be publicized. 
+		\closesection		
+		\subsection[Where's my School bus?]{\href{https://schoolbus.bostonpublicschools.org//}{Where's my School bus?}}
 		\startsubsection
-		% The one above and [https://schoolbus.bostonpublicschools.org//]
-		Another application for parents is 'Where's my School bus?'. The application allows the parents to track their children's school bus in real-time by logging into the application using their child's information and student number. This of course implies that all of Boston's school buses are fitted with tracking functionality.
-		\closesection
-			
-		
+		Another application for parents is "Where's my School bus?". The application allows the parents to track their children's school bus in real-time by logging into the application using their child's information and student number. This of course implies that all of Boston's school buses are fitted with tracking functionality.
+		\closesection		
 		\subsection[Waze]{Waze \cite{InformationSuperhighway}}
 		\startsubsection
 			Waze is an application that specialises on route planning and traffic avoidance.
 	Bostons traffic management department partnered with Waze to combat the cities traffic issues. Waze delivers hereby the data of driving app users to the Boston traffic engineers which then adjust the cities traffic signals. The traffic department also sends back this updated information in addition with future planned adjustments to Waze in turn.
-
 		\closesection
 		\subsection[Street Bump]{Street Bump \cite{EGG17}}
 		\startsubsection
-			In the same manner as the Waze partnership, Boston used the Street Bump application for combating and mapping bumpy roads and potholes. This allowed the city to repair the worst cases of potholes and, as an unexpected side benefit, sunken manhole covers.
-			%[Source: http://www.streetbump.org/about  ,  Notes:Street Bump has been produced by the Mayor's Office of New Urban Mechanics in Boston., Accessed: 05.12.21]
-			%[https://www.boston.gov/departments/innovation-and-technology/street-bump-mobile-application-terms-service, Notes:  Last updated: 6/22/16]
+			In the same manner as the Waze partnership, Boston used the Street Bump application for combating and mapping bumpy roads and potholes. This allowed the city to repair the worst cases of potholes and, as an unexpected side benefit, sunken manhole covers (\href{http://www.streetbump.org/about}{streetbump.org/about}) \cite{BostonStreetBumpTOS}. \\
 			Citizens of Boston can download Street Bump from the App Store on their smartphones. Afterwards they are able to record their car trips and send the record to Boston itself. The potholes and street bumps can be recognized on the city maps by using the phones accelerometer and GPS. The city of Boston only inspect such roadway problems if there are multiple hits from large volumes of data, this provides some form of protection against false positives.\\
 			Street bumps terms and conditions state that the following data is collected and how it is used:\\
 			Major changes in vertical accelerations are combined with GPS locations, a trip consists of all such bumps. Street bump does not collect the route data itself. 
@@ -244,7 +232,6 @@
 			Neither the contact information nor user specific bump data is shared with these entities.
 			The public can see the obstacles and composite bumps on 'streetbump.org'. The individual bumps will only have the date, location and accelerometer readings. If the specific bump is not part of the obstacle it will not appear.  The site will also display a map of recent bumps. The map is hereby centered on a collection of bumps and not necessarily where the bump or trip was. Users are able to choose if their bump data appears publicly.\\
 			In the international usage, the user gives permission to store and process their data in any countries where Street Bump facilities exist. This includes the transfer of personal information. If the user disagrees with the policy then he should not use Street Bump.
-			
 		\closesection	
 		\subsection[Yelp]{Yelp \cite{YelpBoston}}
 		\startsubsection
@@ -322,18 +309,15 @@
 	% The paper also states some possible further applications of MCS
 		\subsection{Privacy control, privacy concerns, and privacy threats of Mobile Crowd-Sourcing}
 		\startsubsection
-			Privacy concerns arise due to the need of environmental data of the participants for the task recommendation system. If the system does not have any safety measures an attack can breach the privacy of the platform.	
-			%[Source: https://ieeexplore.ieee.org/document/7180511 ,Title:Security and privacy in mobile crowdsourcing networks: challenges and opportunities , Authors: K. Yang, K. Zhang, J. Ren, and X. Shen]
+			Privacy concerns arise due to the need of environmental data of the participants for the task recommendation system. If the system does not have any safety measures an attack can breach the privacy of the platform. \\
 			The human involvement, task crowd-sourcing itself, and the dynamic topology can make privacy protection difficult.
-			For example the sensing worker can collect and send data pertaining to his location, which can reveal his movement, or could also contain identifying or private information that could be collected by malicious entities. Additionally on part of the service provider, the difficulty for privacy security increases especially if the outsourced tasks contain sensitive information to complete the task. Another challenge for privacy protection can be the changing topology of the network, due to joining, leaving and movement of workers, and weaken the possible protection against outside attackers.\\
+			For example the sensing worker can collect and send data pertaining to his location, which can reveal his movement, or could also contain identifying or private information that could be collected by malicious entities. Additionally on part of the service provider, the difficulty for privacy security increases especially if the outsourced tasks contain sensitive information to complete the task. Another challenge for privacy protection can be the changing topology of the network, due to joining, leaving and movement of workers, and weaken the possible protection against outside attackers \cite{SecPriMobCSM}.\\
 			Furthermore there exist privacy threats that can be identified as privacy threats from data and privacy threats from tasks itself. As mentioned before, the privacy of the sensed data consists of the danger that collected data contains identifying information, or more general information that can leak privacy, be it environmental, locational, routine, and so on. Similarly, the privacy of computing inputs considers the sensitive data that is enclosed in the tasks itself, which may leak the data of contributors/workers, data owners and other related people. This encapsulated data could consist for example as personal health information, business reports, among other information. Finally the privacy of computing results can occur if the task results itself contain sensitive information that should not leak to the worker or the service provider, and only remain in the hands of the end-user. Evidently, setting up systems that accomplish such conditions can be difficult.\\
 			Further threats to privacy could be identified originating from the tasks, in the form of task privacy of end users, and task privacy of participants. Focused on the end user privacy, it can occur that the content of the stated tasks can reveal information of the end user to the service provider, for example if the task pertains to traffic information on the street, it could be inferred that the end user is in possession of a car. For the privacy of the participants it is important that the tasks itself do not leak information about the participants/workers. Again the example of worker location tracking can be mentioned.\\
-			%[Source:https://ieeexplore.ieee.org/document/6693368  ,Title: Towards A Framework for Privacy-Aware Mobile Crowdsourcing , Authors: Y. Wang, Y. Huang, and C. Louis]
-			Additional privacy concerns have been identified in 'Towards A Framework for Privacy-Aware Mobile Crowdsourcing'. The concern of disclosed user identity states that many mobile crowdsourcing systems collect profile informations of their participants/workers, like name, password, email address and so on. If this data could be breached and retrieved by attackers, then it could have far reaching consequences to the participant. Again mentioned has been the disclosure of user location and activities, just as in the previous paragraph, but with the added idea that the worker/participant may be aware that his activity and location may be monitored but not to which degree, due to ignorance. A second thought goes to the requirement for users that want to share data about general locations and activity but not for sensitive places. The lack of user privacy awareness, as mentioned before, is the idea that the user does not have the knowledge of how the data will be used and in how much privacy risk he is, and therefore has no choice but to trust the application.\\
+			Additional privacy concerns have been identified in 'Towards A Framework for Privacy-Aware Mobile Crowdsourcing'. The concern of disclosed user identity states that many mobile crowdsourcing systems collect profile informations of their participants/workers, like name, password, email address and so on. If this data could be breached and retrieved by attackers, then it could have far reaching consequences to the participant. Again mentioned has been the disclosure of user location and activities, just as in the previous paragraph, but with the added idea that the worker/participant may be aware that his activity and location may be monitored but not to which degree, due to ignorance. A second thought goes to the requirement for users that want to share data about general locations and activity but not for sensitive places. The lack of user privacy awareness, as mentioned before, is the idea that the user does not have the knowledge of how the data will be used and in how much privacy risk he is, and therefore has no choice but to trust the application \cite{PrivacyAwareMCS}.\\
 			Indeed the inability to know or deduce the usage of the gathered data for the common man itself brings further vulnerability. It could occur that the gathered data itself is relatively privately secure but if businesses combine this data with further information gathered from other sources could lead to insights about private information of the users. Lastly, one must consider the usage of mobile devices itself due to increased vulnerability to attacks and security breaches. Mobile devices mostly have limited computational resources to incorporate certain cryptographic protections.\\
-			%[Source:https://ieeexplore.ieee.org/abstract/document/8080202  ,Title:A Survey on Security, Privacy and Trust in Mobile Crowdsourcing , Authors: W. Feng, Z. Yan, H. Zhang, K. Zeng, Y. Xiao, and Y. T.]
-			The publication 'A Survey on Security, Privacy and Trust in Mobile Crowdsourcing' explores various schemes for mobile crowd-sourcing networks. The evaluation is based upon the fulfillment of requirements in regard to trust, privacy and security of the schemes. Especially for guaranteeing privacy, differentially privatize the sensed data and addition of noise, homomorphic encryption for the personal information, or grouping areas of workers together for further generalization, or data aggregation have been proposed in some schemes for example. Nonetheless, it is difficult to develop a scheme for mobile crowdsourcing that fulfils all three requirements for trust, security and privacy.
-			\closesection  
+			The publication "A Survey on Security, Privacy and Trust in Mobile Crowdsourcing" explores various schemes for mobile crowd-sourcing networks. The evaluation is based upon the fulfillment of requirements in regard to trust, privacy and security of the schemes. Especially for guaranteeing privacy, differentially privatize the sensed data and addition of noise, homomorphic encryption for the personal information, or grouping areas of workers together for further generalization, or data aggregation have been proposed in some schemes for example. Nonetheless, it is difficult to develop a scheme for mobile crowdsourcing that fulfils all three requirements for trust, security and privacy \cite{SecPriTrustMCS}.
+		\closesection
 	\closesection
 
 
