--- a/Report/references.bib
+++ b/Report/references.bib
@@ -118,6 +118,30 @@
  url = {https://www.cityofpaloalto.org/files/assets/public/it-department/parking-lot/apps-challenge-playbook-v5-final.pdf}
 }
 
+@article{SecPriMobCSM,
+ author={Yang, Kan and Zhang, Kuan and Ren, Ju and Shen, Xuemin},
+ title={Security and privacy in mobile crowdsourcing networks: challenges and opportunities}, 
+ year={2015},
+ volume={53},
+ number={8},
+ doi={10.1109/MCOM.2015.7180511}
+}
+
+@article{PrivacyAwareMCS,
+ author={Wang, Yang and Huang, Yun and Louis, Claudia},
+ booktitle={2013 International Conference on Social Computing}, 
+ title={Towards a Framework for Privacy-Aware Mobile Crowdsourcing}, 
+ year={2013},
+ doi={10.1109/SocialCom.2013.71}
+}
+
+@article{SecPriTrustMCS,
+ author={Feng, Wei and Yan, Zheng and Zhang, Hengrun and Zeng, Kai and Xiao, Yu and Hou, Y. Thomas}, 
+ title={A Survey on Security, Privacy, and Trust in Mobile Crowdsourcing}, 
+ year={2018},
+ doi={10.1109/JIOT.2017.2765699}
+}
+
 @book{BitbyBit, 
  address = {Princeton, NJ}, 
  edition = {Open Review Edition}, 
@@ -257,4 +281,19 @@
  author = "DW Shift",
  url = {https://www.youtube.com/watch?v=pkTBjMGKPK8},
  date = {2021-02-18}
+}
+
+@online{SmartCityBoston,
+ shorthand = "SCB",
+ title = "Is Boston the Smartest City?",
+ author = "Natalie Holmes",
+ url = {https://convene.com/catalyst/is-boston-the-smartest-city/}
+}
+
+@online{BostonStreetBumpTOS,
+ shorthand = "BSBTOS",
+ title = "Boston Street Bump: Terms of Services",
+ author = "Boston Government",
+ url = {https://www.boston.gov/departments/innovation-and-technology/street-bump-mobile-application-terms-service},
+ date = {2016-06-22}
 }
